TDI-36351: Add request encoding